# reader3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  reader3.py  server.py
docs/: README.md  api.md  architecture.md  chat-and-notebook.md  extending.md  usage.md
reader3/: __init__.py  llm.py  notebook.py  settings.py
reviews/2026-04-22/: review_phase_1.md  review_phase_2.md
scripts/: smoke_chat.py  smoke_notebook.py
solution/2026-04-22/: solutions.md
static/: digest.js  notebook.css  notebook.js  side_panel.css  side_panel.js
templates/: digest.html  library.html  reader.html
templates/partials/: side_panel.html
