[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "filelock>=3.16.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["books", ".venv", "templates"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes (flake8 core), I = isort,
# UP = pyupgrade, B = bugbear, SIM = simplify, C4 = comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "E501",   # line length handled by ruff-format
    "B008",   # FastAPI uses Depends()/File() in defaults
    "SIM115", # NamedTemporaryFile with delete=False can't use context manager portably
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["server.py", "reader3/__init__.py", "reader3/llm.py", "reader3/notebook.py"]
# Pragmatic: catch real bugs without forcing exhaustive annotations.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
# ebooklib and bs4 ship no stubs.
[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.*", "bs4", "bs4.*", "uvicorn", "filelock"]
ignore_missing_imports = true
